check_output_success.txt
warning: unused import: `futures::StreamExt`
 --> gestalt_core\src\adapters\llm\gemini.rs:6:5
  |
6 | use futures::StreamExt;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `gestalt_core` (lib) generated 1 warning (run `cargo fix --lib -p gestalt_core` to apply 1 suggestion)
    Checking gestalt_timeline v0.1.0 (E:\scripts-python\gestalt-rust\gestalt_timeline)
error: expected expression, found `.`
   --> gestalt_timeline\src\services\llm.rs:152:13
    |
152 |             .context("Failed to build message")?;
    |             ^ expected expression

error[E0425]: cannot find value `current_model` in this scope
   --> gestalt_timeline\src\services\llm.rs:220:94
    |
220 |         let dynamic_model_id = agent.as_ref().and_then(|a| a.model_id.as_deref()).unwrap_or(&current_model);
    |                                                                                              ^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `current_model` in this scope
   --> gestalt_timeline\src\services\llm.rs:288:94
    |
288 |         let dynamic_model_id = agent.as_ref().and_then(|a| a.model_id.as_deref()).unwrap_or(&current_model);
    |                                                                                              ^^^^^^^^^^^^^ not found in this scope

warning: unused import: `info`
 --> gestalt_timeline\src\cli\repl.rs:5:15
  |
5 | use tracing::{info, warn};
  |               ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `oauth2::url::Url`
  --> gestalt_timeline\src\services\auth.rs:18:5
   |
18 | use oauth2::url::Url;
   |     ^^^^^^^^^^^^^^^^

warning: unused imports: `Deserialize` and `Serialize`
 --> gestalt_timeline\src\services\gemini.rs:6:13
  |
6 | use serde::{Deserialize, Serialize};
  |             ^^^^^^^^^^^  ^^^^^^^^^

warning: unused import: `debug`
 --> gestalt_timeline\src\services\gemini.rs:7:15
  |
7 | use tracing::{debug, info};
  |               ^^^^^

warning: unused import: `error`
  --> gestalt_timeline\src\services\llm.rs:10:28
   |
10 | use tracing::{debug, info, error};
   |                            ^^^^^

warning: unused import: `FlexibleTimestamp`
  --> gestalt_timeline\src\services\task.rs:11:62
   |
11 | use crate::models::{EventType, Task, TaskResult, TaskStatus, FlexibleTimestamp};
   |                                                              ^^^^^^^^^^^^^^^^^

warning: unused import: `LLMService`
 --> gestalt_timeline\src\services\runtime.rs:4:19
  |
4 |     AgentService, LLMService, ProjectService, TaskService, WatchService, OrchestrationAction, Cognition
  |                   ^^^^^^^^^^

warning: unused import: `std::sync::Arc`
 --> gestalt_timeline\src\services\server.rs:8:5
  |
8 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0425`.
warning: `gestalt_timeline` (lib) generated 8 warnings
error: could not compile `gestalt_timeline` (lib) due to 3 previous errors; 8 warnings emitted
